--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,29 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CuartoUTA
 excludes=
+file.reference.AbsoluteLayout.jar=D:\\yo\\conectores\\JasReport\\Jasper\\AbsoluteLayout.jar
+file.reference.commons-collections-3.2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-logging-1.2.jar
+file.reference.groovy-2.4.5.jar=D:\\yo\\conectores\\JasReport\\Jasper\\groovy-2.4.5.jar
+file.reference.itext-pdfa-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.0.0.jar=D:\\yo\\conectores\\JasReport\\Jasper\\jasperreports-6.0.0.jar
 file.reference.mysql-connector-j-9.4.0.jar=D:\\yo\\conectores\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
+file.reference.pdfbox-app-2.0.35.jar=D:\\yo\\conectores\\pdfbox-app-2.0.35.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.4.0.jar}
+    ${file.reference.mysql-connector-j-9.4.0.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.groovy-2.4.5.jar}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.itext-pdfa-5.5.4.jar}:\
+    ${file.reference.itextpdf-5.5.4.jar}:\
+    ${file.reference.pdfbox-app-2.0.35.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
