--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,13 +34,22 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CuartoUTA
 excludes=
 file.reference.AbsoluteLayout.jar=D:\\yo\\conectores\\JasReport\\Jasper\\AbsoluteLayout.jar
+file.reference.AbsoluteLayout.jar-1=src\\ireport\\AbsoluteLayout.jar
+file.reference.commons-beanutils-1.9.4.jar=src\\ireport\\commons-beanutils-1.9.4.jar
 file.reference.commons-collections-3.2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-collections-3.2.1.jar
+file.reference.commons-collections-3.2.1.jar-1=src\\ireport\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1.jar-1=src\\ireport\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=src\\ireport\\commons-logging-1.2.jar
 file.reference.groovy-2.4.5.jar=D:\\yo\\conectores\\JasReport\\Jasper\\groovy-2.4.5.jar
+file.reference.groovy-2.4.5.jar-1=src\\ireport\\groovy-2.4.5.jar
 file.reference.itext-pdfa-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itext-pdfa-5.5.4.jar
+file.reference.itext-pdfa-5.5.4.jar-1=src\\ireport\\itext-pdfa-5.5.4.jar
 file.reference.itextpdf-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itextpdf-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar-1=src\\ireport\\itextpdf-5.5.4.jar
 file.reference.jasperreports-6.0.0.jar=D:\\yo\\conectores\\JasReport\\Jasper\\jasperreports-6.0.0.jar
+file.reference.jasperreports-6.0.0.jar-1=src\\ireport\\jasperreports-6.0.0.jar
 file.reference.mysql-connector-j-9.4.0.jar=D:\\yo\\conectores\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
 file.reference.pdfbox-app-2.0.35.jar=D:\\yo\\conectores\\pdfbox-app-2.0.35.jar
 includes=**
@@ -55,7 +64,18 @@ javac.classpath=\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.itext-pdfa-5.5.4.jar}:\
     ${file.reference.itextpdf-5.5.4.jar}:\
-    ${file.reference.pdfbox-app-2.0.35.jar}
+    ${file.reference.pdfbox-app-2.0.35.jar}:\
+    ${libs.Mysql.classpath}:\
+    ${libs.mysqlproyecto.classpath}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar-1}:\
+    ${file.reference.commons-digester-2.1.jar-1}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.groovy-2.4.5.jar-1}:\
+    ${file.reference.itext-pdfa-5.5.4.jar-1}:\
+    ${file.reference.itextpdf-5.5.4.jar-1}:\
+    ${file.reference.jasperreports-6.0.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
