--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CuartoUTA
+application.vendor=DELL
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/CuartoUTA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CuartoUTA
+endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=D:\\yo\\conectores\\JasReport\\Jasper\\AbsoluteLayout.jar
 file.reference.AbsoluteLayout.jar-1=src\\ireport\\AbsoluteLayout.jar
@@ -65,8 +67,6 @@ javac.classpath=\
     ${file.reference.itext-pdfa-5.5.4.jar}:\
     ${file.reference.itextpdf-5.5.4.jar}:\
     ${file.reference.pdfbox-app-2.0.35.jar}:\
-    ${libs.Mysql.classpath}:\
-    ${libs.mysqlproyecto.classpath}:\
     ${file.reference.AbsoluteLayout.jar-1}:\
     ${file.reference.commons-beanutils-1.9.4.jar}:\
     ${file.reference.commons-collections-3.2.1.jar-1}:\
