--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,98 +1,78 @@
-annotation.processing.enabled=true
+file.reference.AbsoluteLayout.jar=D:\\yo\\conectores\\JasReport\\Jasper\\AbsoluteLayout.jar
+file.reference.commons-collections-3.2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-digester-2.1.jar
+file.reference.commons-logging-1.2.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-logging-1.2.jar
+file.reference.groovy-2.4.5.jar=D:\\yo\\conectores\\JasReport\\Jasper\\groovy-2.4.5.jar
+file.reference.itext-pdfa-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itext-pdfa-5.5.4.jar
+file.reference.itextpdf-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itextpdf-5.5.4.jar
+file.reference.jasperreports-6.0.0.jar=D:\\yo\\conectores\\JasReport\\Jasper\\jasperreports-6.0.0.jar
+file.reference.jcommon-1.0.15.jar=D:\\yo\\conectores\\JasReport\\jcommon-1.0.15.jar
+file.reference.jfreechart-1.0.12.jar=D:\\yo\\conectores\\JasReport\\jfreechart-1.0.12.jar
+file.reference.org.apache.commons.beanutils.jar=D:\\yo\\conectores\\JasReport\\org.apache.commons.beanutils.jar\\org.apache.commons.beanutils.jar
+java21:annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=CuartoUTA
 application.vendor=DELL
+
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
 build.sysclasspath=ignore
 build.test.classes.dir=${build.dir}/test/classes
 build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# Files in build.classes.dir which should be excluded from distribution jar
+
+debug.classpath=${run.classpath}
+debug.modulepath=${run.modulepath}
+debug.test.classpath=${run.test.classpath}
+debug.test.modulepath=${run.test.modulepath}
+
 dist.archive.excludes=
-# This directory is removed when the project is cleaned:
 dist.dir=dist
 dist.jar=${dist.dir}/CuartoUTA.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CuartoUTA
+
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=D:\\yo\\conectores\\JasReport\\Jasper\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-1=src\\ireport\\AbsoluteLayout.jar
-file.reference.commons-beanutils-1.9.4.jar=src\\ireport\\commons-beanutils-1.9.4.jar
-file.reference.commons-collections-3.2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-collections-3.2.1.jar
-file.reference.commons-collections-3.2.1.jar-1=src\\ireport\\commons-collections-3.2.1.jar
-file.reference.commons-digester-2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-digester-2.1.jar
-file.reference.commons-digester-2.1.jar-1=src\\ireport\\commons-digester-2.1.jar
-file.reference.commons-logging-1.2.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-logging-1.2.jar
-file.reference.commons-logging-1.2.jar-1=src\\ireport\\commons-logging-1.2.jar
-file.reference.groovy-2.4.5.jar=D:\\yo\\conectores\\JasReport\\Jasper\\groovy-2.4.5.jar
-file.reference.groovy-2.4.5.jar-1=src\\ireport\\groovy-2.4.5.jar
-file.reference.itext-pdfa-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itext-pdfa-5.5.4.jar
-file.reference.itext-pdfa-5.5.4.jar-1=src\\ireport\\itext-pdfa-5.5.4.jar
-file.reference.itextpdf-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itextpdf-5.5.4.jar
-file.reference.itextpdf-5.5.4.jar-1=src\\ireport\\itextpdf-5.5.4.jar
-file.reference.jasperreports-6.0.0.jar=D:\\yo\\conectores\\JasReport\\Jasper\\jasperreports-6.0.0.jar
-file.reference.jasperreports-6.0.0.jar-1=src\\ireport\\jasperreports-6.0.0.jar
-file.reference.mysql-connector-j-9.4.0.jar=D:\\yo\\conectores\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
-file.reference.pdfbox-app-2.0.35.jar=D:\\yo\\conectores\\pdfbox-app-2.0.35.jar
 includes=**
-jar.compress=false
+
+# ✅ ÚNICA LIBRERÍA: conector MySQL
+file.reference.mysql-connector-j-9.4.0.jar=D:\\yo\\conectores\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
+
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.4.0.jar}:\
-    ${file.reference.jasperreports-6.0.0.jar}:\
-    ${file.reference.groovy-2.4.5.jar}:\
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.org.apache.commons.beanutils.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.groovy-2.4.5.jar}:\
     ${file.reference.itext-pdfa-5.5.4.jar}:\
     ${file.reference.itextpdf-5.5.4.jar}:\
-    ${file.reference.pdfbox-app-2.0.35.jar}:\
-    ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.commons-beanutils-1.9.4.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar-1}:\
-    ${file.reference.commons-digester-2.1.jar-1}:\
-    ${file.reference.commons-logging-1.2.jar-1}:\
-    ${file.reference.groovy-2.4.5.jar-1}:\
-    ${file.reference.itext-pdfa-5.5.4.jar-1}:\
-    ${file.reference.itextpdf-5.5.4.jar-1}:\
-    ${file.reference.jasperreports-6.0.0.jar-1}
-# Space-separated list of extra javac options
+    ${file.reference.jasperreports-6.0.0.jar}
+
+jar.compress=false
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
+javac.processorpath=${javac.classpath}
 javac.source=21
 javac.target=21
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javac.test.processorpath=\
-    ${javac.test.classpath}
+
+javac.test.classpath=${javac.classpath}:${build.classes.dir}
+javac.test.modulepath=${javac.modulepath}
+javac.test.processorpath=${javac.test.classpath}
+
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
@@ -105,31 +85,25 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-# The jlink additional root modules to resolve
+
 jlink.additionalmodules=
-# The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CuartoUTA
+
 main.class=cuartouta.CuartoUTA
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+
 mkdist.disabled=false
 platform.active=default_platform
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
+
+run.classpath=${javac.classpath}:${build.classes.dir}
+run.jvmargs=--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+run.modulepath=${javac.modulepath}
+run.test.classpath=${javac.test.classpath}:${build.test.classes.dir}
+run.test.modulepath=${javac.test.modulepath}
+
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
