cambios en el sistema

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,4 +1,5 @@
 file.reference.AbsoluteLayout.jar=D:\\yo\\conectores\\JasReport\\Jasper\\AbsoluteLayout.jar
+file.reference.commons-beanutils-1.9.4.jar=src\\ireport\\commons-beanutils-1.9.4.jar
 file.reference.commons-collections-3.2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-collections-3.2.1.jar
 file.reference.commons-digester-2.1.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-digester-2.1.jar
 file.reference.commons-logging-1.2.jar=D:\\yo\\conectores\\JasReport\\Jasper\\commons-logging-1.2.jar
@@ -8,58 +9,59 @@ file.reference.itextpdf-5.5.4.jar=D:\\yo\\conectores\\JasReport\\Jasper\\itextpd
 file.reference.jasperreports-6.0.0.jar=D:\\yo\\conectores\\JasReport\\Jasper\\jasperreports-6.0.0.jar
 file.reference.jcommon-1.0.15.jar=D:\\yo\\conectores\\JasReport\\jcommon-1.0.15.jar
 file.reference.jfreechart-1.0.12.jar=D:\\yo\\conectores\\JasReport\\jfreechart-1.0.12.jar
-file.reference.org.apache.commons.beanutils.jar=D:\\yo\\conectores\\JasReport\\org.apache.commons.beanutils.jar\\org.apache.commons.beanutils.jar
-java21:annotation.processing.enabled=true
-annotation.processing.enabled.in.editor=false
-annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CuartoUTA
-application.vendor=DELL
-
-build.classes.dir=${build.dir}/classes
-build.classes.excludes=**/*.java,**/*.form
-build.dir=build
-build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-
-debug.classpath=${run.classpath}
-debug.modulepath=${run.modulepath}
-debug.test.classpath=${run.test.classpath}
-debug.test.modulepath=${run.test.modulepath}
-
-dist.archive.excludes=
-dist.dir=dist
-dist.jar=${dist.dir}/CuartoUTA.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CuartoUTA
-
-endorsed.classpath=
-excludes=
-includes=**
-
-# ✅ ÚNICA LIBRERÍA: conector MySQL
 file.reference.mysql-connector-j-9.4.0.jar=D:\\yo\\conectores\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
+file.reference.pdfbox-app-2.0.35.jar=D:\\yo\\conectores\\pdfbox-app-2.0.35.jar
+    java21:annotation.processing.enabled=true
+    annotation.processing.enabled.in.editor=false
+    annotation.processing.processors.list=
+    annotation.processing.run.all.processors=true
+    annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+    application.title=CuartoUTA
+    application.vendor=DELL
 
-javac.classpath=\
+    build.classes.dir=${build.dir}/classes
+    build.classes.excludes=**/*.java,**/*.form
+    build.dir=build
+    build.generated.dir=${build.dir}/generated
+    build.generated.sources.dir=${build.dir}/generated-sources
+    build.sysclasspath=ignore
+    build.test.classes.dir=${build.dir}/test/classes
+    build.test.results.dir=${build.dir}/test/results
+
+    debug.classpath=${run.classpath}
+    debug.modulepath=${run.modulepath}
+    debug.test.classpath=${run.test.classpath}
+    debug.test.modulepath=${run.test.modulepath}
+
+    dist.archive.excludes=
+    dist.dir=dist
+    dist.jar=${dist.dir}/CuartoUTA.jar
+    dist.javadoc.dir=${dist.dir}/javadoc
+    dist.jlink.dir=${dist.dir}/jlink
+    dist.jlink.output=${dist.jlink.dir}/CuartoUTA
+
+    endorsed.classpath=
+    excludes=
+    includes=**
+
+    # ✅ ÚNICA LIBRERÍA: conector MySQL
+    file.reference.mysql-connector-j-9.4.0.jar=D:\\yo\\conectores\\mysql-connector-j-9.4.0\\mysql-connector-j-9.4.0.jar
+
+    javac.classpath=\
     ${file.reference.mysql-connector-j-9.4.0.jar}:\
-    ${file.reference.jcommon-1.0.15.jar}:\
-    ${file.reference.jfreechart-1.0.12.jar}:\
-    ${file.reference.org.apache.commons.beanutils.jar}:\
+    ${file.reference.jasperreports-6.0.0.jar}:\
+    ${file.reference.groovy-2.4.5.jar}:\
     ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-beanutils-1.9.4.jar}:\
     ${file.reference.commons-collections-3.2.1.jar}:\
     ${file.reference.commons-digester-2.1.jar}:\
     ${file.reference.commons-logging-1.2.jar}:\
-    ${file.reference.groovy-2.4.5.jar}:\
     ${file.reference.itext-pdfa-5.5.4.jar}:\
     ${file.reference.itextpdf-5.5.4.jar}:\
-    ${file.reference.jasperreports-6.0.0.jar}
+    ${file.reference.jcommon-1.0.15.jar}:\
+    ${file.reference.jfreechart-1.0.12.jar}:\
+    ${file.reference.pdfbox-app-2.0.35.jar}
 
-jar.compress=false
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
@@ -73,37 +75,37 @@ javac.test.classpath=${javac.classpath}:${build.classes.dir}
 javac.test.modulepath=${javac.modulepath}
 javac.test.processorpath=${javac.test.classpath}
 
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.html5=false
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
-javadoc.version=false
-javadoc.windowtitle=
+    javadoc.additionalparam=
+    javadoc.author=false
+    javadoc.encoding=${source.encoding}
+    javadoc.html5=false
+    javadoc.noindex=false
+    javadoc.nonavbar=false
+    javadoc.notree=false
+    javadoc.private=false
+    javadoc.splitindex=true
+    javadoc.use=true
+    javadoc.version=false
+    javadoc.windowtitle=
 
-jlink.additionalmodules=
-jlink.additionalparam=
-jlink.launcher=true
-jlink.launcher.name=CuartoUTA
+    jlink.additionalmodules=
+    jlink.additionalparam=
+    jlink.launcher=true
+    jlink.launcher.name=CuartoUTA
 
-main.class=cuartouta.CuartoUTA
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
+    main.class=cuartouta.CuartoUTA
+    manifest.file=manifest.mf
+    meta.inf.dir=${src.dir}/META-INF
 
-mkdist.disabled=false
-platform.active=default_platform
+    mkdist.disabled=false
+    platform.active=default_platform
 
-run.classpath=${javac.classpath}:${build.classes.dir}
-run.jvmargs=--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
-run.modulepath=${javac.modulepath}
-run.test.classpath=${javac.test.classpath}:${build.test.classes.dir}
-run.test.modulepath=${javac.test.modulepath}
+    run.classpath=${javac.classpath}:${build.classes.dir}
+    run.jvmargs=--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+    run.modulepath=${javac.modulepath}
+    run.test.classpath=${javac.test.classpath}:${build.test.classes.dir}
+    run.test.modulepath=${javac.test.modulepath}
 
-source.encoding=UTF-8
-src.dir=src
-test.src.dir=test
+    source.encoding=UTF-8
+    src.dir=src
+    test.src.dir=test
